Update 1.1, Updated controls.

--- a/index.html
+++ b/index.html
@@ -236,27 +236,14 @@
     <button id="cheat-button">Solve Cube</button>
     <div id="instructions">
         <h3>Controls</h3>
-        <p><span class="key">Mouse</span> Click and drag faces to rotate</p>
-        <p><span class="key">Right Click</span> Orbit camera</p>
-        <p><span class="key">Scroll</span> Zoom in/out</p>
-        <p>Primary Keys:</p>
-        <p>
-            <span class="key">I</span> Up
-            <span class="key">K</span> Down
-            <span class="key">J</span> Left
-            <span class="key">L</span> Right
-            <span class="key">Space</span> Front
-            <span class="key">H</span> Back
-        </p>
-        <p>Alternative Keys:</p>
-        <p>
-            <span class="key">U</span> <span class="key">D</span> 
-            <span class="key">L</span> <span class="key">R</span> 
-            <span class="key">F</span> <span class="key">B</span>
-        </p>
-        <p>Modifiers:</p>
-        <p><span class="key">Shift</span> Counter-clockwise</p>
-        <p><span class="key">Alt</span> Double move (180°)</p>
+        <p><span class="key">Right Click</span> + Drag to rotate face sections</p>
+        <p><span class="key">Left Click</span> + Drag to orbit camera</p>
+        <p>To rotate a face section:</p>
+        <ol>
+            <li>Hover over any section to highlight it</li>
+            <li>Right-click and hold</li>
+            <li>Drag up/down or left/right to rotate that section</li>
+        </ol>
     </div>
     <script type="importmap">
         {
